tests/invalid/action_buttons/no_trigger.fixture
 must have required property 'yesnomaybe'.
Line 1